<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Virtual Life</string>
    <string name="action_settings">Settings</string>
    <string name="button_text_view_accepted_task_list">查看已接受的任务</string>
    <string name="button_text_view_log">查看日志</string>
    <string name="button_text_enter_task_editor">进入任务编辑器</string>
    <string name="button_text_view_acceptable_task_list">查看可接受的任务</string>
    <string name="activity_label_task_editor">创建新任务</string>
    <string name="button_text_create_new_task">创建新任务</string>
    <string name="activity_label_task_database">任务</string>
    <string name="button_text_enter_task_database">进入任务数据库</string>
    <string name="task_id_title">编号</string>
    <string name="title_task_title">标题</string>
    <string name="title_task_description">内容</string>
    <string name="default_value_of_textview">DVoT</string>
    <string name="task_listview_title_key">TaskListViewTitleKey</string>
    <string name="task_listview_subtitle_key">TaskListViewSubtitleKey</string>
    <string name="database_name">my_virtual_life_db</string>
    <string name="title_task_subtitle">子标题</string>
    <string name="button_text_ok">确定</string>
    <string name="button_text_cancel">取消</string>
    <string name="task_listview_id_key">TaskListViewIDKey</string>
    <string name="player_attribute_type_id_property">0</string>
    <string name="player_attribute_type_id_status">1</string>
    <string name="player_attribute_type_id_skill">2</string>
    <string name="player_attribute_listview_name_key">Player Attribute ListView Name Key</string>
    <string name="player_attribute_listview_value_key">Player Attribute ListView Value Key</string>
    <string name="activity_label_log_list">日志列表</string>
    <string name="log_listview_id_key">Log ListView ID Key</string>
    <string name="log_listview_datetime_key">Log ListView DateTime Key</string>
    <string name="log_listview_content_key">Log ListView Content Key</string>
    <string name="activity_label_task_viewer_to_accept">任务接受界面</string>
    <string name="task_listview_description_key">Task ListView Description Key</string>
    <string name="player_attribute_listview_id_key">Player Attribute ListView ID Key</string>
    <string name="activity_label_task_viewer_to_accomplish_or_abort">任务完成/放弃界面</string>
    <string name="title_task_accept_datetime">接受时间</string>
    <string name="menu_title_action_enter_task_database">任务</string>
    <string name="menu_title_action_view_log">日志</string>
    <string name="activity_label_achievement_database">成就</string>
    <string name="achievement_listview_id_key">Achievement ListView ID Key</string>
    <string name="achievement_listview_title_key">Achievement ListView Title Key</string>
    <string name="achievement_listview_description_key">Achievement ListView Description Key</string>
    <string name="achievement_listview_status_key">Achievement ListView Status Key</string>
    <string name="menu_title_action_enter_achievement_database">成就</string>
    <string name="menu_title_action_add_achievement">新增</string>
    <string name="activity_label_achievement_editor">创建新成就</string>
    <string name="achievement_id_title">编号</string>
    <string name="title_achievement_title">标题</string>
    <string name="title_achievement_description">描述</string>
    <string name="title_achievement_target_attribute_name">属性名</string>
    <string name="title_achievement_target_attribute_value">属性值</string>
    <string name="menu_title_action_about">关于</string>
    <string name="version_title">版本号</string>
    <string name="version">1.0.0.0</string>
    <string name="author_name_title">作者</string>
    <string name="author_name">蒋甬杭</string>
    <string name="author_email_title">Email</string>
    <string name="author_email">seedjyh@gmail.com</string>
    <string name="menu_title_action_add_task">创建新任务</string>
    <string name="leave_editor_alert">确定要退出吗？</string>
    <string name="checkbox_text_show_acceptable_task">显示可接受任务</string>
    <string name="checkbox_text_show_accepted_task">显示已接受任务</string>
    <string name="button_text_newest">&gt;|</string>
    <string name="button_text_newer">&gt;</string>
    <string name="button_text_older">&lt;</string>
    <string name="button_text_oldest">|&lt;</string>

</resources>
