<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/version_title" />

        <TextView
            android:id="@+id/textview_id_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/author_name_title" />

        <TextView
            android:id="@+id/textview_id_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/author_email_title" />

        <TextView
            android:id="@+id/textview_id_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_email" />
    </LinearLayout>
    
    <Button
        android:id="@+id/button_id_about_dialog_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_ok" />

</LinearLayout>